--- a/_config.yml
+++ b/_config.yml
@@ -1,25 +1,24 @@
 # Site settings
-title: Emerald | A simple Jekyll blog
-description: "A minimal blog template, build with Jekyll."
-url: "http://www.jacoporabolini.com/emerald"
+title: Prose Prism
+description: "A fun educational blog website."
+url: ""
 author:
-  name: "Jacopo Rabolini"
-  email: "hello@jacoporabolini.com"
-  url: "http://www.jacoporabolini.com"
+  name: "Kowalski"
+  email: "proseprism@gmail.com"
+  url: "http://www.proseprism.com"
 
 # Build settings
-baseurl: /emerald # Change this to your relative path (ex: /blog/), or leave just a /
+baseurl: "" # Change this to your relative path (ex: /blog/), or leave just a /
 markdown: kramdown
 source: .
 destination: ./_site
-permalink: /:title
+permalink: /blog/:title/
 paginate: 8
 paginate_path: /page:num/
 
 # Default values
 defaults:
-  -
-    scope:
+  - scope:
       path: ""
       type: "posts"
     values:
@@ -29,10 +28,12 @@ defaults:
 gems:
   - jekyll-paginate
 
+plugins: [jekyll-paginate]
+
 # Custom variables
 version: "1.1.0"
 
 # Options
 custom_header: false
 custom_nav_footer: false
-reverse: false
+reverse: true
