--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
 title: Prose Prism
-description: "A fun educational blog website."
+description: "An Informative Website"
 url: ""
 author:
-  name: "Kowalski"
+  name: "Prose Prism"
   email: "proseprism@gmail.com"
   url: "http://www.proseprism.com"
 
@@ -12,7 +12,7 @@ baseurl: "" # Change this to your relative path (ex: /blog/), or leave just a /
 markdown: kramdown
 source: .
 destination: ./_site
-permalink: /blog/:title/
+permalink: /proseprism/:title/
 paginate: 8
 paginate_path: /page:num/
 
